--- a/about.html
+++ b/about.html
@@ -190,10 +190,55 @@
           best insights and advice on the most sustainable agricultural
           practices to ensure the best profits and efficiencies
         </div>
-        <div
-          class="about-us-img d-flex justify-content-center align-items-center my-5"
-        >
-          <img src="images/about-us.jpg" />
+      
+
+        <div class="about-us-box">
+          <div class="card-container">
+            <div class="my-card">
+              <div class="top">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div class="mid">
+                <h2>OUR VISION</h2>
+              </div>
+              <div class="bottom">
+               To be ranked first amongst top Agric firms that proffer solutions to the challenges of agriculture as one of the agendas of sustainable development goals (SDGs).
+              </div>
+            </div>
+            <div class="my-card">
+              <div class="top">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div class="mid">
+                <h2>WHY WE ARE GLITE</h2>
+              </div>
+              <div class="bottom">
+               Glite Farms & Agro, we stand out amongst others as farmers who produce quality and substantial farm output for both consumption and exportation. </br> Using both the olden and monder-day application of farming skilss and techniques, technologically improved seeds, and farm machinery etc, and we are committed to expanding our reach in improving living standards for all.
+              </div>
+            </div>
+            <div class="my-card">
+              <div class="top">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div class="mid">
+                <h2>OUR MISSION</h2>
+              </div>
+              <div class="bottom">
+                To reform and blend agriculture with the aid of modern digital innovation and technologies to enhance agribusnness and the supply chains of agriculture while creating employment, local and international market, raise low-income farmers through our modern techniques, and alternative wealth for the masses, ensuring accessibility to modern-day Agric-market and services, all from the comfort of your home.
+              </div> 
+            </div>
+            <div class="my-card">
+              <div class="top">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div class="mid">
+                <h2>OUR PRIORITY</h2>
+              </div>
+              <div class="bottom">
+                GLITE FARMS & AGRO is a formeost brewing agric firm imbibed with the latest technological standards to enhance agriculture, exploring the value chains of agriculture to create sustainable means of income as well producing fresh farm products for both consumption and exportation (Business 2 Consumers & Business 2 Business) using the latest technological standards to ensure financial security through Agriculture Insurance Corporation to insure all farm projects.
+              </div>
+            </div>
+          </div>
         </div>
 
         <!--<div class="row">
@@ -234,7 +279,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+    <!--<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
           <div class="col-md-6">
@@ -260,7 +305,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section
       class="ftco-section ftco-counter img"
