--- a/contact.html
+++ b/contact.html
@@ -195,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="row block-9">
+       <!----<div class="row block-9">
           <div class="col-md-6 order-md-last d-flex">
             <form action="#" class="bg-white p-5 contact-form">
               <div class="form-group">
@@ -233,9 +233,9 @@
                 />
               </div>
             </form>
-          </div>
+          </div>-->
 
-          <div class="col-md-6 d-flex">
+          <!--<div class="col-md-6 d-flex">
             <div id="map" class="bg-white">
               <img
                 src="./images/contact-details.jpg"
@@ -245,7 +245,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <footer class="ftco-footer ftco-section">
       <div class="container">
