--- a/training.html
+++ b/training.html
@@ -189,7 +189,10 @@
         <div
           class="about-us-img d-flex justify-content-center align-items-center my-5"
         >
-          <img src="images/training.jpg" style="height: 100%; width: 100%" />
+          <img
+            src="images/agro-training.jpg"
+            style="height: 60%; width: 100%"
+          />
         </div>
 
         <!--<div class="row">
