--- a/agro-marketing.html
+++ b/agro-marketing.html
@@ -233,7 +233,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+    <!--<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
           <div class="col-md-6">
@@ -259,7 +259,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section
       class="ftco-section ftco-counter img"
