--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
       </div>
     </section>-->
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+    <!--<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
       <div class="container py-4">
         <div class="row d-flex justify-content-center py-5">
           <div class="col-md-6">
@@ -942,7 +942,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
+
     <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row">
